Raid helper, GroupTileIndicators, MenuEntry Adjustments

--- a/runelite-client/pom.xml
+++ b/runelite-client/pom.xml
@@ -44,6 +44,11 @@
 
 	<dependencies>
 		<dependency>
+			<groupId>io.socket</groupId>
+			<artifactId>socket.io-client</artifactId>
+			<version>1.0.0</version>
+		</dependency>
+		<dependency>
 			<groupId>org.slf4j</groupId>
 			<artifactId>slf4j-api</artifactId>
 		</dependency>
